note-ui/src/app/home/home.less
.jumbotron {
  margin: 0px 0 40px 0;
  text-align: center;
  color: @darkBlue;
  background-color: @lightGrey;

  h1 {
    margin-bottom: 20px;
    line-height: 1;
  }

  .lead {
    line-height: 1.25;
  }
}

.notes-container {
  width: 60%;
  margin: 0 auto;

  @media only screen and (max-width: 768px) {
    width: 100%;
  }

  h4 {
    color: grey;
    text-align: center;
    margin-bottom: 40px;
  }

  .list-group-item {
    padding-top: 2px;
    padding-right: 6px;
    height: 45px;
    line-height: 34px;
    font-size: 16px;
  }
}

